--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src -e js,ts,json --exec \"ts-node src/index.ts\"",
-    "build": "tsup src/index.ts --format cjs --clean",
-    "start": "node dist/index.js"
+    "dev": "NODE_ENV=dev nodemon --watch src -e js,ts,json --exec \"ts-node src/index.ts\"",
+    "build": "NODE_ENV=dev tsup src/index.ts --format cjs --clean",
+    "start": "NODE_ENV=dev node dist/index.js",
+    "test-inte": "NODE_ENV=test jest --testTimeout=5000 --config=jest.inte.config.json",
+    "test-unit": "NODE_ENV=test jest --testTimeout=5000 --config=jest.unit.config.json"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +16,16 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.4.0",
+    "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.13",
+    "@types/supertest": "^2.0.12",
+    "cross-env": "^7.0.3",
+    "jest": "^29.4.3",
     "nodemon": "^2.0.19",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
     "tsup": "^6.2.3",
@@ -26,6 +36,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
+    "mongodb": "^5.0.0",
+    "mongoose": "^6.9.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   }
